# atlas

./: .gitignore  COLAB_GUIDE.md  HANDOFF.md  MODAL_GUIDE.md  README.md  STUDY_GUIDE.md  pyproject.toml  send_update_over_text.py  sitecustomize.py  structure.md
AlgoTuneTasks/: __init__.py
agent/: __init__.py  base.py  llm_agent.py  prompts.py
atlas.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
benchmark/: __init__.py  base.py
configs/: kernel_basic.yaml
data/: rlm_memory_fftconv_restart_easyv1.txt  rlm_memory_softmax.txt  synth_softmax_all_advantage_v1.jsonl  synth_softmax_dpo_v1.jsonl  synth_softmax_twophase_p1.jsonl  synth_softmax_twophase_p2.jsonl  synth_softmax_v3_sample0.jsonl
experiment/: algotune_prompts.py  alphaevolve_runner.py  analyze_search.py  atlas_rlm_eval.py  build_advantage_sft.py  build_alphaevolve_sft.py  build_dpo_dataset.py  build_fft_speedup_sft_datasets.py  build_rlm_memory_bank.py  build_sft_dataset.py  build_synth_dpo_dataset.py  build_synth_sft.py  build_twophase_sft.py  eval_algotune.py  eval_alphaevolve.py  eval_standalone.py  local_eval_standalone.py  local_openevolve_runner.py  local_train_atlas_sft.py  local_vllm_utils.py  modal_eval.py  openevolve_runner.py  plot_adv_pass100.py  plot_algotune_pass40.py  research_metrics.py  research_suite.py  run.py  summarize_study.py  synth_reasoning.py  train_atlas_lora.py  train_atlas_sft.py
runs/: synth_fft_nodiff_qualitycheck_v1
setup/: auto_oe_progress_v1.py  auto_stream_chain_v1.py  colab_install.sh  install_deps.sh  migrate_modal_workspace.sh  monitor_oe_base4.sh  (+22 more)
(+3762 files in other folders)
