[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas"
version = "0.1.0"
description = "ATLAS on AlgoTune with OpenEvolve, SFT, and held-out eval"
requires-python = ">=3.10"
dependencies = [
    "modal",
    "openai",
    "pyyaml",
    "matplotlib",
]

[tool.setuptools.packages.find]
include = ["experiment*", "utils*"]
